more README and examples